; ModuleID = '/home/carl/AnghaBench/FFmpeg/tools/extr_coverity.c_av_realloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/tools/extr_coverity.c_av_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"av_free\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @av_realloc(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = call i32 @__coverity_negative_sink__(i64 %7)
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %21

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @__coverity_escape__(i8* %12)
  %14 = load i64, i64* %5, align 8
  %15 = call i8* @__coverity_alloc__(i64 %14)
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @__coverity_writeall__(i8* %16)
  %18 = load i8*, i8** %4, align 8
  %19 = call i32 @__coverity_mark_as_afm_allocated__(i8* %18, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %20 = load i8*, i8** %4, align 8
  store i8* %20, i8** %3, align 8
  br label %22

21:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %22

22:                                               ; preds = %21, %11
  %23 = load i8*, i8** %3, align 8
  ret i8* %23
}

declare dso_local i32 @__coverity_negative_sink__(i64) #1

declare dso_local i32 @__coverity_escape__(i8*) #1

declare dso_local i8* @__coverity_alloc__(i64) #1

declare dso_local i32 @__coverity_writeall__(i8*) #1

declare dso_local i32 @__coverity_mark_as_afm_allocated__(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
